force-app/main/default/objects/Visit__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>This filed using in Mobile visit component</description>
    <label>AccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>