force-app/main/default/objects/Visit__c/fields/Actual_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Time__c</fullName>
    <label>Actual Start Time</label>
    <type>DateTime</type>
</CustomField>