force-app/main/default/objects/Visit__c/fields/App_visitPlan_Id__c.field-meta.xml
<CustomField>
    <fullName>App_visitPlan_Id__c</fullName>
    <label>App visitPlan Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>