force-app/main/default/objects/Visit__c/fields/Approval_StatusFor__c.field-meta.xml
<CustomField>
    <fullName>Approval_StatusFor__c</fullName>
    <formula>IF(Beat__c != null,  Text(Approval_Status__c ), Text( Approval_Status__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>