force-app/main/default/objects/Visit__c/fields/ASM_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>ASM_Employee_Code__c</fullName>
    <formula>Owner:User.ASM_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASM Employee Code</label>
    <type>Text</type>
</CustomField>