force-app/main/default/objects/Visit__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat Plan _Not_In_Use</label>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>