force-app/main/default/objects/Visit__c/fields/Beat_Item__c.field-meta.xml
<CustomField>
    <fullName>Beat_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat Item</label>
    <referenceTo>Junction_Beat__c</referenceTo>
    <relationshipLabel>Visits (Beat Item)</relationshipLabel>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>