force-app/main/default/objects/Visit__c/fields/Beat_Name__c.field-meta.xml
<CustomField>
    <fullName>Beat_Name__c</fullName>
    <formula>Beat__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Name</label>
    <type>Text</type>
</CustomField>