force-app/main/default/objects/Visit__c/fields/Checked_expiry__c.field-meta.xml
<CustomField>
    <fullName>Checked_expiry__c</fullName>
    <label>Checked the expiry dates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>