force-app/main/default/objects/Visit__c/fields/CheckedInLatitude__c.field-meta.xml
<CustomField>
    <fullName>CheckedInLatitude__c</fullName>
    <label>CheckedInLatitude</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>