force-app/main/default/objects/Visit__c/fields/CheckedInLongitude__c.field-meta.xml
<CustomField>
    <fullName>CheckedInLongitude__c</fullName>
    <label>CheckedInLongitude</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>