force-app/main/default/objects/Visit__c/fields/CheckedOutLatitude__c.field-meta.xml
<CustomField>
    <fullName>CheckedOutLatitude__c</fullName>
    <label>CheckedOutLatitude</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>