force-app/main/default/objects/Visit__c/fields/CheckedOutLongitude__c.field-meta.xml
<CustomField>
    <fullName>CheckedOutLongitude__c</fullName>
    <label>CheckedOutLongitude</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>