force-app/main/default/objects/Visit__c/fields/Checkin_Status__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Status__c</fullName>
    <formula>IF(ISPICKVAL(Approval_Status__c, &apos;Approved&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checkin Status</label>
    <type>Checkbox</type>
</CustomField>