force-app/main/default/objects/Visit__c/fields/Child_beat__c.field-meta.xml
<CustomField>
    <fullName>Child_beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat</label>
    <referenceTo>Child_beat__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>