force-app/main/default/objects/Visit__c/fields/Clock_Out__c.field-meta.xml
<CustomField>
    <fullName>Clock_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clock Out</label>
    <type>Checkbox</type>
</CustomField>