force-app/main/default/objects/Visit__c/fields/Collection_Center__c.field-meta.xml
<CustomField>
    <fullName>Collection_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Center</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>