force-app/main/default/objects/Visit__c/fields/Companion_name__c.field-meta.xml
<CustomField>
    <fullName>Companion_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Companion name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits3</relationshipName>
    <type>Lookup</type>
</CustomField>