force-app/main/default/objects/Visit__c/fields/Cost_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Cost_Incurred__c</fullName>
    <label>Cost Incurred</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>