force-app/main/default/objects/Visit__c/fields/CreatedByRoleName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByRoleName__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByRoleName</label>
    <type>Text</type>
</CustomField>