force-app/main/default/objects/Visit__c/fields/Customer_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_City__c</fullName>
    <formula>Account1__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer City</label>
    <type>Text</type>
</CustomField>