force-app/main/default/objects/Visit__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>BLANKVALUE(Lead__r.Name,
BLANKVALUE( Account1__r.Name,
	Other_Visit__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>