force-app/main/default/objects/Visit__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>IF(TEXT(Account1__r.Customer_Type__c ) ==&apos;Primary Customer&apos;,  TEXT(Account1__r.Primary_Customer_Type__c), TEXT(Account1__r.Secondary_Customer_Type__c) )</formula>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>