force-app/main/default/objects/Visit__c/fields/CustomerPreference__c.field-meta.xml
<CustomField>
    <fullName>CustomerPreference__c</fullName>
    <label>CustomerPreference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>