force-app/main/default/objects/Visit__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visits (Dealer)</relationshipLabel>
    <relationshipName>Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>