force-app/main/default/objects/Visit__c/fields/Distance_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Distance_Salesforce__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(ClockIn_Latitude__c)),
    NOT(ISBLANK(Clockin_Longitude__c)),
    
    OR(
      AND(
        NOT(ISBLANK(Previous_Visit__c)),
        NOT(ISBLANK(Previous_Visit__r.ClockIn_Latitude__c)),
        NOT(ISBLANK(Previous_Visit__r.Clockin_Longitude__c))
      ),
      AND(
        ISBLANK(Previous_Visit__c),
        NOT(ISBLANK(Daily_Log__r.Clock_In_Location__c))
      )
    )
  ),

  IF(
    NOT(ISBLANK(Previous_Visit__c)),
    DISTANCE(
      GEOLOCATION(ClockIn_Latitude__c, Clockin_Longitude__c),
      GEOLOCATION(Previous_Visit__r.ClockIn_Latitude__c, Previous_Visit__r.Clockin_Longitude__c),
      &apos;km&apos;
    ),
    DISTANCE(
      GEOLOCATION(ClockIn_Latitude__c, Clockin_Longitude__c),
      Daily_Log__r.Clock_In_Location__c,
      &apos;km&apos;
    )
  ),

  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance (Salesforce)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>