force-app/main/default/objects/Visit__c/fields/Distance_Travelled__c.field-meta.xml
<CustomField>
    <fullName>Distance_Travelled__c</fullName>
    <label>Not in Use</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>