force-app/main/default/objects/Visit__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visits (Distributor)</relationshipLabel>
    <relationshipName>Visits1_del</relationshipName>
    <type>Lookup</type>
</CustomField>