force-app/main/default/objects/Visit__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Actual_Start_Time__c)),
    NOT(ISBLANK(Actual_End_Time__c))
  ),
  TEXT(ROUND(ABS((Actual_End_Time__c - Actual_Start_Time__c) * 24 * 60), 2)) &amp; &quot; min&quot;,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>