force-app/main/default/objects/Visit__c/fields/Edit_Access__c.field-meta.xml
<CustomField>
    <fullName>Edit_Access__c</fullName>
    <formula>IF( Owner:User.Id = $User.Id , &apos;true&apos;, &apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit Access</label>
    <type>Text</type>
</CustomField>