force-app/main/default/objects/Visit__c/fields/eventId__c.field-meta.xml
<CustomField>
    <fullName>eventId__c</fullName>
    <label>eventId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>