force-app/main/default/objects/Visit__c/fields/Field_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Lead_Name__c</fullName>
    <label>Field Lead Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>