force-app/main/default/objects/Visit__c/fields/GeoLocation_checkin__c.field-meta.xml
<CustomField>
    <fullName>GeoLocation_checkin__c</fullName>
    <label>GeoLocation checkin</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>