force-app/main/default/objects/Visit__c/fields/Is_Substockist_VIsit__c.field-meta.xml
<CustomField>
    <fullName>Is_Substockist_VIsit__c</fullName>
    <formula>Child_beat__r.Sub_Stockist__c ==  Account1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Substockist_VIsit</label>
    <type>Checkbox</type>
</CustomField>