force-app/main/default/objects/Visit__c/fields/is_Survey_Taken__c.field-meta.xml
<CustomField>
    <fullName>is_Survey_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Survey Taken</label>
    <type>Checkbox</type>
</CustomField>