force-app/main/default/objects/Visit__c/fields/isVisitActive__c.field-meta.xml
<CustomField>
    <fullName>isVisitActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isVisitActive</label>
    <type>Checkbox</type>
</CustomField>