force-app/main/default/objects/Visit__c/fields/Junction_Beat__c.field-meta.xml
<CustomField>
    <fullName>Junction_Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junction Beat</label>
    <referenceTo>Junction_Beat__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>