force-app/main/default/objects/Visit__c/fields/minute_duration__c.field-meta.xml
<CustomField>
    <fullName>minute_duration__c</fullName>
    <formula>IF(
    AND(NOT(ISBLANK(Actual_Start_Time__c)), NOT(ISBLANK(Actual_End_Time__c))),
    FLOOR((TIMEVALUE(Actual_End_Time__c) - TIMEVALUE(Actual_Start_Time__c)) * 1440),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>minute duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>