force-app/main/default/objects/Visit__c/fields/Miss_visit__c.field-meta.xml
<CustomField>
    <fullName>Miss_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Miss visit</label>
    <type>Checkbox</type>
</CustomField>