force-app/main/default/objects/Visit__c/fields/Missed_PostPone_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Missed_PostPone_Longitude__c</fullName>
    <label>Missed/PostPone Longitude</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>