force-app/main/default/objects/Visit__c/fields/Missed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Reason__c</fullName>
    <label>Missed Reason_not_in_Use</label>
    <type>TextArea</type>
</CustomField>