force-app/main/default/objects/Visit__c/fields/No_of_Photos__c.field-meta.xml
<CustomField>
    <fullName>No_of_Photos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Photos Uploaded</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>