force-app/main/default/objects/Visit__c/fields/OrderCreated__c.field-meta.xml
<CustomField>
    <fullName>OrderCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OrderCreated</label>
    <type>Checkbox</type>
</CustomField>