force-app/main/default/objects/Visit__c/fields/Outlet__c.field-meta.xml
<CustomField>
    <fullName>Outlet__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Outlet</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>