force-app/main/default/objects/Visit__c/fields/Owner_Check__c.field-meta.xml
<CustomField>
    <fullName>Owner_Check__c</fullName>
    <formula>IF( OwnerId  = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Check</label>
    <type>Checkbox</type>
</CustomField>