force-app/main/default/objects/Visit__c/fields/PJP_Item__c.field-meta.xml
<CustomField>
    <fullName>PJP_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PJP Item</label>
    <referenceTo>PJP_Item__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>