force-app/main/default/objects/Visit__c/fields/presentation__c.field-meta.xml
<CustomField>
    <fullName>presentation__c</fullName>
    <label>Product of the day presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>