force-app/main/default/objects/Visit__c/fields/Previous_Visit__c.field-meta.xml
<CustomField>
    <fullName>Previous_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>