force-app/main/default/objects/Visit__c/fields/Product_Discussion_Comments__c.field-meta.xml
<CustomField>
    <fullName>Product_Discussion_Comments__c</fullName>
    <label>Product Discussion Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>