force-app/main/default/objects/Visit__c/fields/Route_Info__c.field-meta.xml
<CustomField>
    <fullName>Route_Info__c</fullName>
    <label>Route Info</label>
    <length>50</length>
    <type>Text</type>
</CustomField>