force-app/main/default/objects/Visit__c/fields/Sales_App_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_App_ID__c</fullName>
    <externalId>true</externalId>
    <label>Sales App ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>