force-app/main/default/objects/Visit__c/fields/Spend_Time__c.field-meta.xml
<CustomField>
    <fullName>Spend_Time__c</fullName>
    <formula>ROUND(( Actual_End_Time__c -  Actual_Start_Time__c )*24*60,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spend(in min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>