force-app/main/default/objects/Visit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>PostPone</fullName>
                <isActive>false</isActive>
                <label>PostPone</label>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
                <isActive>false</isActive>
                <label>Rescheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>