force-app/main/default/objects/Visit__c/fields/TA_DA_Applicable__c.field-meta.xml
<CustomField>
    <fullName>TA_DA_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TA/DA Applicable</label>
    <type>Checkbox</type>
</CustomField>