force-app/main/default/objects/Visit__c/fields/Travel_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Travel_Allowance__c</fullName>
    <formula>Distance_Travelled__c * 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>